# Legacy-CubiX

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/enet/: callbacks.c  compress.c  list.h  packet.c  time.h  utility.h
lib/enet/include/enet/: callbacks.h  enet.h  protocol.h  types.h  unix.h  win32.h
lib/enet/src/: host.c  list.c  peer.c  protocol.c  unix.c  win32.c
lib/fast_noise/: FastNoise.cpp
lib/fast_noise/include/fast_noise/: FastNoise.h
lib/fast_noise/src/: FastNoise.cpp
lib/glad/include/KHR/: khrplatform.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glfw/include/glfw/: glfw3.h  glfw3native.h
lib/glm/include/glm/detail/: _features.hpp  func_common.inl  func_exponential.inl  func_geometric.inl  func_integer.inl  func_matrix.inl  func_matrix_simd.inl  func_trigonometric.inl  type_half.inl  type_mat2x2.inl  type_mat2x3.inl  (+11 more)
lib/imgui/src/: imgui.cpp  imgui_draw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
source/: defines.h  line_counter.py  main.cpp
source/core/: cubix_assert.cpp  cubix_assert.h  cubix_log.cpp  cubix_log.h  cubix_macro.h  event.h
source/core/container/: color.h  container3d.h  facing.cpp  facing.h  transform.cpp  transform.h  view.h
source/core/data/: color.cpp  color.h  container2d.h  container3d.h  facing.cpp  facing.h  lockable.h  memory.h  multiple_facing.cpp  multiple_facing.h  process_state.h  registry.h  serializeable.h  static_string.h
source/core/io/: file_path.cpp  file_path.h  files.cpp  files.h  riff_parser.cpp  riff_parser.h  user_input_handler.cpp  user_input_handler.h  window.cpp  window.h
source/core/logic/: functor.h  game_time.cpp  game_time.h  no_copy.h  singelton.h  string_cast.cpp  string_cast.h
source/core/math/: axis_aligned_bb.cpp  axis_aligned_bb.h  color.cpp  color.h  game_time.cpp  game_time.h  glm_math.h  rigidbody.cpp  rigidbody.h  transform.cpp  transform.h  view.cpp  view.h
source/core/net/: net_client.cpp  net_client.h  net_instance.cpp  net_instance.h  net_server.cpp  net_server.h
source/core/opengl/: attribute.cpp  attribute.h  attributebuffer.cpp  attributebuffer.h  buffer.cpp  buffer.h  helper.cpp  helper.h  imgui_context.cpp  imgui_context.h  openg_error.h  opengl_context.cpp  opengl_context.h  opengl_error.cpp  opengl_helper.cpp  opengl_helper.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  window.cpp  window.h
source/core/opengl/data/: attribute.h  interleaved_attribute.cpp  interleaved_attribute.h  single_attribute.cpp  single_attribute.h
source/core/time/: auto_stop_watch.cpp  auto_stop_watch.h  average_stop_watch.cpp  average_stop_watch.h  game_time.cpp  stop_watch.cpp  stop_watch.h
source/core/util/: nocopy.h
source/game/: cubix.cpp  cubix.h  cubix_client.cpp  cubix_client.h  cubix_server.cpp  cubix_server.h  game_performance.cpp  game_performance.h  player_controller.cpp  player_controller.h  proxy.h
source/game/client/: client.h  cubix_client.cpp  cubix_client.h  imgui_performance_counter.cpp  imgui_performance_counter.h  moveable_view.cpp  moveable_view.h  renderer.cpp  renderer.h  voxel_clipboard.cpp  voxel_clipboard.h
source/game/client/rendering/: renderable.cpp  renderable.h  renderer.cpp  renderer.h
source/game/client/world/: world_client.cpp  world_client.h
source/game/common/: cubix.cpp  cubix.h
source/game/common/entity/: entity.cpp  entity.h  entitytype.h  living_entity.cpp  living_entity.h  player.cpp  player.h
source/game/common/net/: client.cpp  client.h  net_client.cpp  net_client.h  net_instance.cpp  net_instance.h  net_server.cpp  net_server.h  packet.h  packet_type.h  server.cpp  server.h
source/game/common/packet/: packet.cpp  packet.h  packet_client_information.cpp  packet_server_information.cpp  packet_server_information.h
source/game/common/voxel/: voxel.cpp  voxel.h  voxel_group.cpp  voxel_group.h
source/game/common/world/: chunk_worker.cpp  chunk_worker.h  world.cpp  world.h  world_chunk.cpp  world_chunk.h  world_chunk_column.cpp  world_chunk_column.h  world_chunk_container.cpp  world_chunk_container.h  world_chunk_manager.cpp
source/game/common/worldgenerator/: world_generator.cpp  world_generator.h  world_generator_perlin.cpp  world_generator_perlin.h
source/game/packet/: packet.h  packet_client_information.h
source/game/performance/: auto_performance_monitor.cpp  auto_performance_monitor.h  performance_monitor.cpp  performance_monitor.h  performance_monitor_group.cpp  performance_monitor_group.h
source/game/rendering/: block_outline_renderer.h  gizmo_renderer.h  moveable_view.cpp  moveable_view.h  renderable.h  renderer.cpp  renderer.h  sub_renderer.h
source/game/rendering/world/: block_outline_renderer.cpp  gizmo_renderer.cpp  gizmo_renderer.h  world_chunk_renderer.cpp  world_chunk_renderer.h
source/game/server/: connected_client.cpp  connected_client.h  cubix_server.cpp  cubix_server.h  server.h
source/game/server/world/: world_server.cpp  world_server.h
source/game/voxel/: voxel.cpp  voxel.h  voxel_group.cpp  voxel_group.h
source/game/world/: world.cpp  world.h  world_chunk.h  world_chunk_column.cpp  world_chunk_container.cpp  world_chunk_container.h  world_chunk_manager.cpp  world_chunk_manager.h  world_position.cpp  world_position.h
source/game/world/chunk/: chunk_worker.cpp  chunk_worker.h  empty_world_chunk.cpp  empty_world_chunk.h  i_world_chunk.h  new_world_chunk.h  render_world_chunk.cpp  render_world_chunk.h  world_chunk.cpp  world_chunk.h  world_chunk_column.cpp  world_chunk_column.h  world_chunk_container.cpp  world_chunk_container.h  world_chunk_factory.h  world_chunk_layer.cpp  world_chunk_layer.h  world_chunk_mesh.cpp  world_chunk_mesh.h  world_chunk_worker.cpp  world_chunk_worker.h
source/game/world/entity/: entity.cpp  entity.h  player.cpp  player.h
source/game/world/voxel/: placed_voxel.cpp  placed_voxel.h  voxel.cpp  voxel.h  voxel_group.cpp
source/game/world/worldgenerator/: world_generator.cpp  world_generator.h  world_generator_perlin.cpp  world_generator_perlin.h
source/gameplay/voxel/: voxel.cpp  voxel.h
(+48 files in other folders)
